name:                rospkg
version:             0.1.0.0
synopsis:            ROS package management tools 
description:         Please see README.md
homepage:            https://github.com/RobiticsHS/rospkg#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Alexander Krupenkin <mail@akru.me> 
category:            Robotics
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Robotics.ROS.Pkg
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite rospkg-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rospkg
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RoboticsHS/rospkg
